# Physics-Penguin

./: CMakeLists.txt  README.md  core.cpp  core.h  events.h  glad.c  main.cpp  mesh.cpp  mesh.h  what_to_do  window.cpp
core/: camera.cpp  camera.h  controller.cpp  controller.h  core.cpp  core.h  events.cpp  input.cpp  input.h  mesh.cpp  mesh.h  particle.h  scene.h  scenemanager.cpp  scenemanager.h  shader.cpp  shader.h  texture.cpp  texture.h  window.h
glad/: glad.h
kontroler/: kontroler.ino
scenes/: cubescene3d.cpp  cubescene3d.h  testparticlesscene.cpp  testparticlesscene.h  triangletestscene.cpp  triangletestscene.h
shaders/: particle.frag  particle.vert
temple/: project.fzz
tools/: geometry.cpp  geometry.h
